[gd_scene load_steps=4 format=2]

[ext_resource path="res://MovingSawblade.gd" type="Script" id=1]
[ext_resource path="res://Hazard/SawBlade.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hazard/DrawAssistant.gd" type="Script" id=3]

[node name="MovingSawblade" type="Node2D"]

script = ExtResource( 1 )
side = 1
move_to = Vector2( 0, 256 )
move_time = 1.5

[node name="SawBlade" parent="." index="0" instance=ExtResource( 2 )]

[node name="Tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="DrawAssistant" type="Node2D" parent="." index="2"]

script = ExtResource( 3 )

[node name="TriggerTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TriggerTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


